# yash-app-events

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  ROADMAP.md  SPECS.md
.github/workflows/: auto-tag.yml  ci.yml  profiles.yml  release.yml
catalog/: README.md
catalog/profiles/blazblue-entropy-effect/stage-tracker/v1.0.0/: catalog-entry.json  profile.json  verification.json
catalog/profiles/blazblue-entropy-effect/stage-tracker/v1.0.0/output-recipes/: current-stage-text-no-newline.json  current-stage-text.json
catalog/schema/: catalog-v1.schema.json  source-entry-v1.schema.json
crates/capture/: Cargo.toml
crates/capture-pw/: Cargo.toml
crates/capture-pw/examples/: portal_smoke.rs
crates/capture-pw/src/: lib.rs
crates/capture/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: collection.rs  lib.rs  main.rs  routes.rs
crates/engine/: Cargo.toml
crates/engine/src/: collection.rs  lib.rs  suite.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  main.rs
crates/output/: Cargo.toml
crates/output/src/: diagnostic.rs  lib.rs  routing.rs
crates/profile/: Cargo.toml
crates/profile/src/: archive.rs  lib.rs  local.rs  store.rs
crates/profile/tests/fixtures/: profile-v1.json
crates/protocol/: Cargo.toml
crates/protocol/src/: client.rs  lib.rs
crates/vision/: Cargo.toml
crates/vision/examples/: classifier_benchmark.rs  detector_benchmark.rs
crates/vision/src/: classifier.rs  lib.rs  ocr.rs  preprocess.rs  region_change.rs  seven_segment.rs  template.rs
crates/vision/tests/fixtures/classifier/: hud_icon.onnx  manifest.json
docs/: architecture.md  capture-smoke.md  capture.md  classifier-benchmark.json  classifier.md  diagnostics.md  gui-acceptance-report.md  gui.md  ocr-benchmark.json  ocr.md  outputs.md  performance.md  protocol-v1.md  replay.md  security-review.md  vision.md
packaging/applications/: io.github.yash_app_events.desktop
packaging/completions/: yash-eventsctl.bash
packaging/man/: yash-app-eventsd.1  yash-eventsctl.1
packaging/systemd/: yash-app-eventsd.service
scripts/: benchmark-ocr.py  check-readme-claims.sh  generate-classifier-fixtures.py  generate-ocr-fixtures.sh  install-user.sh  requirements-fixtures.txt  requirements-ocr-benchmark.txt
