[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/profile",
  "crates/capture",
  "crates/capture-pw",
  "crates/vision",
  "crates/engine",
  "crates/output",
  "crates/daemon",
  "crates/cli",
  "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/yash-app-events"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
sha2 = "0.10.8"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[workspace.dependencies.tempfile]
version = "3.15.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
