[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/profile",
  "crates/capture",
  "crates/capture-pw",
  "crates/vision",
  "crates/engine",
  "crates/output",
  "crates/daemon",
  "crates/cli",
  "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/yash-app-events"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
sha2 = "0.10.8"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
chrono = { version = "0.4.39", features = ["serde"] }
png = "0.18.1"
ashpd = { version = "0.12.3", default-features = false, features = ["tokio"] }
pipewire = { version = "0.10.0", features = ["v1_2_0"] }
futures-util = "0.3.31"
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow", "wayland"] }

[workspace.dependencies.tempfile]
version = "3.15.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
