[package]
name = "yash-app-events-capture-pw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ashpd.workspace = true
futures-util.workspace = true
pipewire.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
yash-app-events-capture = { path = "../capture" }
