[package]
name = "yash-app-events-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
yash-app-events-profile = { path = "../profile" }
yash-app-events-output = { path = "../output" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
