[package]
name = "yash-eventsctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yash-app-events-profile = { path = "../profile" }
yash-app-events-protocol = { path = "../protocol" }
yash-app-events-engine = { path = "../engine" }

[dev-dependencies]
tempfile.workspace = true
yash-app-eventsd = { path = "../daemon" }
