[package]
name = "yash-app-eventsd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
png.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
yash-app-events-capture = { path = "../capture" }
yash-app-events-capture-pw = { path = "../capture-pw" }
yash-app-events-engine = { path = "../engine" }
yash-app-events-output = { path = "../output" }
yash-app-events-profile = { path = "../profile" }
yash-app-events-protocol = { path = "../protocol" }
yash-app-events-vision = { path = "../vision" }

[dev-dependencies]
tempfile.workspace = true
