[package]
name = "yash-app-events-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true
yash-app-events-protocol = { path = "../protocol" }

[dev-dependencies]
tempfile.workspace = true
