[package]
name = "yash-app-events-vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
yash-app-events-capture = { path = "../capture" }
yash-app-events-profile = { path = "../profile" }

[dev-dependencies]
serde_json.workspace = true
